--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: python
 python:
-  - "2.7"
-  - "3.4"
   - "3.6"
+  - "3.7"
+  - "3.8-dev"
 install:
   - pip install unittest2
 script: python tests.py
